# rtfi

./: CMakeLists.txt  INTEL.md  README.md  file2.json  gdb_exec  script.sh
include/: debug.h  debug.h.gch  error_codes.h  fault_injection_mechanism.h  protocol.h  rsp.h  storage.h  syndrome_detection.h
intelSupport/: 92-usbblaster.rules
platformDescription/: nios2.json
src/: main.c
src/FaultInjectionMechanism/: fault_injection_mechanism.c  rsp.c  storage.c
src/FaultManager/: fault_manager.c
src/SyndromeDetection/: syndrome_detection.c
tests/compute_new_addr/: test  test.sh  test_compute_new_addr.c
tests/fim/: a_nios2_terminal_test10_flip_bit10.ref  a_nios2_terminal_test1_setone_bit3.ref  a_nios2_terminal_test3_setzero_bit2.ref  a_nios2_terminal_test4_flip_bit31.ref  a_nios2_terminal_test5_flip_bit10.ref  a_nios2_terminal_test6_setone_bit3.ref  a_nios2_terminal_test9_flip_bit31.ref  clean.sh  fim.sh  fim__test.c
tools/: altera_common_functions.sh  altera_fpga_program.sh  altera_jtag_fix.sh  clean.sh  computeAverage.sh  csv_parser.py  csv_parserOutput.sh  example.py  fetch_SFMT_RNG.sh  helper_functions.sh  load_binary_start_gdb_server.sh  quartus_env.sh  script.sh  sfmt_library_compile.sh  sfmt_library_install.sh
